--- a/VendorsAndOrders.Solution/VendorsAndOrders/Views/Home/Index.cshtml
+++ b/VendorsAndOrders.Solution/VendorsAndOrders/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <h1>Welcome to your Vendor and Order tracker!</h1>
-<h3><a href='/categories'>View categories</a></h3>
-<h3><a href='/categories/new'>Add a new category</a></h3>
+<h3><a href='/vendors'>View vendors</a></h3>
+<h3><a href='/vendors/new'>Add a new vendor</a></h3>
