--- a/VendorsAndOrders.Solution/VendorsAndOrders/wwwroot/css/styles.css
+++ b/VendorsAndOrders.Solution/VendorsAndOrders/wwwroot/css/styles.css
@@ -11,7 +11,7 @@ div#footer {
     bottom:0px;
     left:0px;
     width:100%;
-    color:#CCC;
+    color:rgb(136, 136, 136);
     background:#333;
     padding:8px;
 }
