--- a/VendorsAndOrders.Solution/VendorsAndOrders/Views/Shared/Footer.cshtml
+++ b/VendorsAndOrders.Solution/VendorsAndOrders/Views/Shared/Footer.cshtml
@@ -1,1 +1,1 @@
-<div id="footer">Made with ❤️ by Chris Ramer (Chris is Awesome) | Proudly hosted on <a href="https://github.com/ChrisRamer/basic-web-applications-ind-project">GitHub</a>!</div>
+<div id="footer">Made with ❤️ by <b>Chris Ramer (Chris is Awesome)</b> | Proudly hosted on <a href="https://github.com/ChrisRamer/basic-web-applications-ind-project">GitHub</a></div>
