Change price input to number

--- a/VendorsAndOrders.Solution/VendorsAndOrders/Views/Orders/New.cshtml
+++ b/VendorsAndOrders.Solution/VendorsAndOrders/Views/Orders/New.cshtml
@@ -15,7 +15,7 @@
 	<br><br>
 	<label for="price">Price</label>
 	<br>
-	<input id="price" name="price" type="text">
+	<input id="price" name="price" type="number">
 	<br><br>
 	<label for="date">Date</label>
 	<br>
