--- a/VendorsAndOrders.Solution/VendorsAndOrders/wwwroot/css/styles.css
+++ b/VendorsAndOrders.Solution/VendorsAndOrders/wwwroot/css/styles.css
@@ -17,3 +17,27 @@ div#footer {
     padding:8px;
     border-radius: 10px;
 }
+
+input {
+    background-color: rgb(51, 51, 51);
+	color: rgb(223, 223, 223);
+	margin-bottom: 10px;
+	border: 2px solid rgb(70, 70, 70);
+	border-radius: 25px;
+    padding: 2.5px 10px;
+}
+
+button {
+	background-color: rgb(91, 248, 99);
+	color: rgb(36, 36, 36);
+	border: 2px solid rgb(70, 70, 70);
+	border-radius: 25px;
+}
+
+#delete {
+    background-color: rgb(255, 0, 0);
+	color: rgb(36, 36, 36);
+    font-weight: bold;
+	border: 2px solid rgb(126, 0, 0);
+	border-radius: 25px;
+}
