--- a/VendorsAndOrders.Solution/VendorsAndOrders/Views/Home/Index.cshtml
+++ b/VendorsAndOrders.Solution/VendorsAndOrders/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
 	Layout = "_Layout";
 }
 
-<h1>Welcome to your Vendor and Order tracker!</h1>
-<h3><a href='/vendors'>View vendors</a></h3>
-<h3><a href='/vendors/new'>Add a new vendor</a></h3>
+<h1 id="title">Pierre's Vendor and Order Tracker</h1>
+<h5 id="subtitle"><i>Where you can keep track of the millions of orders you make every day</i></h5>
+<br>
+<h4><a href='/vendors'>View vendors</a></h4>
+<h4><a href='/vendors/new'>Add a new vendor</a></h4>
