--- a/VendorsAndOrders.Solution/VendorsAndOrders/Views/Orders/New.cshtml
+++ b/VendorsAndOrders.Solution/VendorsAndOrders/Views/Orders/New.cshtml
@@ -2,7 +2,7 @@
 	Layout = "_Layout";
 }
 
-<h1>Add a new order for @Model.Name</h1>
+<h1 id="title">Add a new order for @Model.Name</h1>
 
 <form action="/vendors/@Model.Id" method="post">
 	<label for="title">Title</label>
