--- a/VendorsAndOrders.Solution/VendorsAndOrders/wwwroot/css/styles.css
+++ b/VendorsAndOrders.Solution/VendorsAndOrders/wwwroot/css/styles.css
@@ -41,3 +41,11 @@ button {
 	border: 2px solid rgb(126, 0, 0);
 	border-radius: 25px;
 }
+
+#title {
+	color: rgb(26, 231, 78);
+}
+
+#subtitle {
+	color: grey;
+}
